--- a/src/main/webapp/static/mobile/html/orderMgmtHtml/OrdermgmtHtml/orderListSeach.html
+++ b/src/main/webapp/static/mobile/html/orderMgmtHtml/OrdermgmtHtml/orderListSeach.html
@@ -19,101 +19,164 @@
 		</header>
 		<div class="mui-content">
 			<form class="mui-input-group">
-				<div class="mui-input-row">
-					<label>订单编号：</label>
-					<input type="text" class="inOrdNum mui-input-clear" placeholder="请输入">
-				</div>
-				<div class="mui-input-row">
-					<label>订单状态：</label>
-					<div class="pre">
-						<select class="secStyle" name="" id="input_div_ordStatus">
-							<option value=""></option>
-						</select>
-						<input class="savedata" type="hidden" value=''>
-						<div style="clear:both"></div>
+				<div class="mui-input-row app_bline2">
+					<div class="labelLf" style="font-weight: normal;">订单搜索</div>
+					<div class="mui-input-row">
+						<label>订单编号：</label>
+						<input type="text" class="inOrdNum mui-input-clear" placeholder="请输入">
+					</div>
+					<div class="mui-input-row">
+						<label>订单状态：</label>
+						<div class="pre">
+							<select class="secStyle" name="" id="input_div_ordStatus">
+								<option value=""></option>
+							</select>
+							<input class="savedata" type="hidden" value=''>
+							<div style="clear:both"></div>
+						</div>
+					</div>
+					<div class="mui-input-row">
+						<label>审核状态：</label>
+						<div class="pre">
+							<select class="secStyle" name="" id="input_div_cheStatus">
+								<option value=""></option>
+							</select>
+							<input class="savedata" type="hidden" value=''>
+							<div style="clear:both"></div>
+						</div>
+					</div>
+					<div class="mui-input-row">
+						<label>尾款：</label>
+						<div class="pre">
+							<select class="secStyle" name="" id="input_div_finalMoney">
+								<option value="">请选择</option>
+								<option value="1">有尾款</option>
+							</select>
+							<input class="savedata" type="hidden" value=''>
+							<div style="clear:both"></div>
+						</div>
+					</div>
+					<div class="mui-input-row">
+						<label>经销店电话：</label>
+						<input type="text" class="inOrdPhone mui-input-clear" placeholder="请输入">
+					</div>
+					<div class="mui-input-row">
+						<label>商品货号：</label>
+						<input type="text" class="inItemNum mui-input-clear" placeholder="请输入">
+					</div>
+					<div class="mui-input-row">
+						<label>经销店名称：</label>
+						<div class="pre">
+							<input class="newinput mui-input-clear" type="text" placeholder="请选择经销店">
+							<span class="mui-icon mui-icon-arrowup hideSpan app_cb3" id="hideSpanAdd"></span>
+							<span class="mui-icon mui-icon-arrowdown showSpan app_cb3" id="showSpanAdd"></span>
+							<div class="input_div" style="display: none;"></div>											
+							<input class="savedata" type="hidden" value=''>
+							<div style="clear:both"></div>
+						</div>
+					</div>
+					<div class="mui-input-row">
+						<label>采购中心：</label>
+						<input type="text" class="centersName mui-input-clear" placeholder="请输入">
+					</div>
+					<div class="mui-input-row">
+						<label>客户专员：</label>
+						<input type="text" class="conName mui-input-clear" placeholder="请输入">
+					</div>
+					<div class="mui-input-row">
+						<label>待同意发货：</label>
+						<div class="pre">
+							<select class="secStyle" name="" id="input_div_waitchkStatus">
+								<option value="">请选择</option>
+								<option value="0">待审核</option>
+								<option value="1">审核失败</option>
+								<option value="2">其他</option>
+							</select>
+							<input class="savedata" type="hidden" value=''>
+							<div style="clear:both"></div>
+						</div>
+					</div>
+					<div class="mui-input-row">
+						<label>待发货：</label>
+						<div class="pre">
+							<select class="secStyle" name="" id="input_div_waitsendgoods">
+								<option value="">请选择</option>
+								<option value="1">是</option>
+							</select>
+							<input class="savedata" type="hidden" value=''>
+							<div style="clear:both"></div>
+						</div>
+					</div>
+					<div class="mui-input-row">
+						<label>待出库：</label>
+						<div class="pre">
+							<select class="secStyle" name="" id="input_div_outbound">
+								<option value="">请选择</option>
+								<option value="1">是</option>
+							</select>
+							<input class="savedata" type="hidden" value=''>
+							<div style="clear:both"></div>
+						</div>
 					</div>
 				</div>
-				<div class="mui-input-row">
-					<label>审核状态：</label>
-					<div class="pre">
-						<select class="secStyle" name="" id="input_div_cheStatus">
-							<option value=""></option>
-						</select>
-						<input class="savedata" type="hidden" value=''>
-						<div style="clear:both"></div>
+				<div class="mui-input-row app_bline2">
+					<div class="labelLf" style="font-weight: normal;">付款单搜索</div>
+					<div class="mui-input-row">
+						<label>业务状态：</label>
+						<div class="pre">
+							<select class="secStyle" name="" id="input_div_businessStatus">
+								<option value="">请选择</option>
+								<option value="0">未支付</option>
+								<option value="1">审批完成</option>
+								<option value="2">审批中</option>
+								<option value="2">部分支付</option>
+								<option value="2">全部支付</option>
+								<option value="1">已发货</option>
+								<option value="2">已收货</option>
+								<option value="2">已完成</option>
+								<option value="2">已取消</option>
+							</select>
+							<input class="savedata" type="hidden" value=''>
+							<div style="clear:both"></div>
+						</div>
 					</div>
-				</div>
-				<div class="mui-input-row">
-					<label>尾款：</label>
-					<div class="pre">
-						<select class="secStyle" name="" id="input_div_finalMoney">
-							<option value="">请选择</option>
-							<option value="1">有尾款</option>
-						</select>
-						<input class="savedata" type="hidden" value=''>
-						<div style="clear:both"></div>
+					<div class="mui-input-row">
+						<label>审核状态：</label>
+						<div class="pre">
+							<select class="secStyle" name="" id="input_div_checkStatus">
+								<option value="">请选择</option>
+								<option value="0">待运营总监审核</option>
+								<option value="1">待财务经理审核</option>
+								<option value="2">审批完成</option>
+								<option value="2">驳回</option>
+							</select>
+							<input class="savedata" type="hidden" value=''>
+							<div style="clear:both"></div>
+						</div>
 					</div>
-				</div>
-				<div class="mui-input-row">
-					<label>经销店电话：</label>
-					<input type="text" class="inOrdPhone mui-input-clear" placeholder="请输入">
-				</div>
-				<div class="mui-input-row">
-					<label>商品货号：</label>
-					<input type="text" class="inItemNum mui-input-clear" placeholder="请输入">
-				</div>
-				<div class="mui-input-row">
-					<label>经销店名称：</label>
-					<div class="pre">
-						<input class="newinput mui-input-clear" type="text" placeholder="请选择经销店">
-						<span class="mui-icon mui-icon-arrowup hideSpan app_cb3" id="hideSpanAdd"></span>
-						<span class="mui-icon mui-icon-arrowdown showSpan app_cb3" id="showSpanAdd"></span>
-						<div class="input_div" style="display: none;"></div>											
-						<input class="savedata" type="hidden" value=''>
-						<div style="clear:both"></div>
+					<div class="mui-input-row">
+						<label>排产状态：</label>
+						<div class="pre">
+							<select class="secStyle" name="" id="input_div_scheduStatus">
+								<option value="">请选择</option>
+								<option value="0">未排产</option>
+								<option value="1">排产中</option>
+								<option value="2">排产完成</option>
+							</select>
+							<input class="savedata" type="hidden" value=''>
+							<div style="clear:both"></div>
+						</div>
 					</div>
-				</div>
-				<div class="mui-input-row">
-					<label>采购中心：</label>
-					<input type="text" class="centersName mui-input-clear" placeholder="请输入">
-				</div>
-				<div class="mui-input-row">
-					<label>客户专员：</label>
-					<input type="text" class="conName mui-input-clear" placeholder="请输入">
-				</div>
-				<div class="mui-input-row">
-					<label>待同意发货：</label>
-					<div class="pre">
-						<select class="secStyle" name="" id="input_div_waitchkStatus">
-							<option value="">请选择</option>
-							<option value="0">待审核</option>
-							<option value="1">审核失败</option>
-							<option value="2">其他</option>
-						</select>
-						<input class="savedata" type="hidden" value=''>
-						<div style="clear:both"></div>
-					</div>
-				</div>
-				<div class="mui-input-row">
-					<label>待发货：</label>
-					<div class="pre">
-						<select class="secStyle" name="" id="input_div_waitsendgoods">
-							<option value="">请选择</option>
-							<option value="1">是</option>
-						</select>
-						<input class="savedata" type="hidden" value=''>
-						<div style="clear:both"></div>
-					</div>
-				</div>
-				<div class="mui-input-row">
-					<label>待出库：</label>
-					<div class="pre">
-						<select class="secStyle" name="" id="input_div_outbound">
-							<option value="">请选择</option>
-							<option value="1">是</option>
-						</select>
-						<input class="savedata" type="hidden" value=''>
-						<div style="clear:both"></div>
+					<div class="mui-input-row">
+						<label>待支付：</label>
+						<div class="pre">
+							<select class="secStyle" name="" id="input_div_unpaid">
+								<option value="">请选择</option>
+								<option value="1">是</option>
+							</select>
+							<input class="savedata" type="hidden" value=''>
+							<div style="clear:both"></div>
+						</div>
 					</div>
 				</div>
 				<div class="mui-input-row">
