佣金，结算价整理

--- a/src/main/webapp/static/mobile/html/orderMgmtHtml/OrdermgmtHtml/orderAmend.html
+++ b/src/main/webapp/static/mobile/html/orderMgmtHtml/OrdermgmtHtml/orderAmend.html
@@ -66,10 +66,11 @@
 				<label>服务费：</label>
 				<input type="text" class="mui-input-clear" id="staServerPrice" disabled>
 			</div>
-			<div class="mui-input-row">
-				<label>佣金：</label>
-				<input type="text" id="staCommission" class="mui-input-clear" disabled>
-			</div>
+			<!-- 隐藏佣金 -->
+			<!--<div class="mui-input-row">-->
+				<!--<label>佣金：</label>-->
+				<!--<input type="text" id="staCommission" class="mui-input-clear" disabled>-->
+			<!--</div>-->
 			<div class="mui-input-row">
 				<label>供应商：</label>
 				<input type="text" class="mui-input-clear" id="insupplier" disabled>
