--- a/src/main/webapp/static/mobile/html/orderMgmtHtml/OrdermgmtHtml/orderCheck.html
+++ b/src/main/webapp/static/mobile/html/orderMgmtHtml/OrdermgmtHtml/orderCheck.html
@@ -61,10 +61,11 @@
 				<label>服务费：</label>
 				<input type="text" id="staServerPrice" disabled>
 			</div>
-			<div class="mui-input-row">
-				<label>佣金：</label>
-				<input type="text" id="staCommission" disabled>
-			</div>
+			<!-- 隐藏佣金 -->
+			<!--<div class="mui-input-row">-->
+				<!--<label>佣金：</label>-->
+				<!--<input type="text" id="staCommission" disabled>-->
+			<!--</div>-->
 			<div class="mui-input-row">
 				<label>供应商：</label>
 				<input type="text" id="insupplier" disabled>
