客户专员修改

--- a/src/main/webapp/static/mobile/html/orderMgmtHtml/OrdermgmtHtml/orderListSeach.html
+++ b/src/main/webapp/static/mobile/html/orderMgmtHtml/OrdermgmtHtml/orderListSeach.html
@@ -124,31 +124,17 @@
 					<div class="mui-input-row">
 						<label>业务状态：</label>
 						<div class="pre">
-							<select class="secStyle" name="" id="input_div_businessStatus">
-								<option value="">请选择</option>
-								<option value="0">未支付</option>
-								<option value="1">审批完成</option>
-								<option value="2">审批中</option>
-								<option value="2">部分支付</option>
-								<option value="2">全部支付</option>
-								<option value="1">已发货</option>
-								<option value="2">已收货</option>
-								<option value="2">已完成</option>
-								<option value="2">已取消</option>
+							<select class="secStyle" name="" id="input_div_poStatus">
+								<option value=""></option>
 							</select>
 							<input class="savedata" type="hidden" value=''>
 							<div style="clear:both"></div>
 						</div>
-					</div>
 					<div class="mui-input-row">
 						<label>审核状态：</label>
 						<div class="pre">
-							<select class="secStyle" name="" id="input_div_checkStatus">
-								<option value="">请选择</option>
-								<option value="0">待运营总监审核</option>
-								<option value="1">待财务经理审核</option>
-								<option value="2">审批完成</option>
-								<option value="2">驳回</option>
+							<select class="secStyle" name="" id="input_div_orderStatus">
+								<option value=""></option>
 							</select>
 							<input class="savedata" type="hidden" value=''>
 							<div style="clear:both"></div>
@@ -157,24 +143,22 @@
 					<div class="mui-input-row">
 						<label>排产状态：</label>
 						<div class="pre">
-							<select class="secStyle" name="" id="input_div_scheduStatus">
+							<select class="secStyle" name="" id="input_div_poSchType">
 								<option value="">请选择</option>
 								<option value="0">未排产</option>
 								<option value="1">排产中</option>
 								<option value="2">排产完成</option>
 							</select>
-							<input class="savedata" type="hidden" value=''>
 							<div style="clear:both"></div>
 						</div>
 					</div>
 					<div class="mui-input-row">
 						<label>待支付：</label>
 						<div class="pre">
-							<select class="secStyle" name="" id="input_div_unpaid">
+							<select class="secStyle" name="" id="wait_pay">
 								<option value="">请选择</option>
 								<option value="1">是</option>
 							</select>
-							<input class="savedata" type="hidden" value=''>
 							<div style="clear:both"></div>
 						</div>
 					</div>
