--- a/src/main/webapp/static/mobile/html/orderMgmtHtml/OrdermgmtHtml/orderListSeach.html
+++ b/src/main/webapp/static/mobile/html/orderMgmtHtml/OrdermgmtHtml/orderListSeach.html
@@ -130,6 +130,7 @@
 							<input class="savedata" type="hidden" value=''>
 							<div style="clear:both"></div>
 						</div>
+					</div>
 					<div class="mui-input-row">
 						<label>审核状态：</label>
 						<div class="pre">
