--- a/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inSearch.html
+++ b/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inSearch.html
@@ -84,6 +84,7 @@
 							<input class="savedata" type="hidden" value=''>
 							<div style="clear:both"></div>
 						</div>
+					</div>
 					<div class="mui-input-row">
 						<label>审核状态：</label>
 						<div class="pre">
