--- a/src/main/webapp/static/mobile/html/orderMgmtHtml/OrdermgmtHtml/ordDetail.html
+++ b/src/main/webapp/static/mobile/html/orderMgmtHtml/OrdermgmtHtml/ordDetail.html
@@ -58,10 +58,11 @@
 				<label>服务费：</label>
 				<input type="text" class="mui-input-clear" id="staServerPrice" disabled>
 			</div>
-			<div class="mui-input-row">
-				<label>佣金：</label>
-				<input type="text" id="staCommission" class="mui-input-clear" disabled>
-			</div>
+			<!-- 隐藏佣金 -->
+			<!--<div class="mui-input-row">-->
+				<!--<label>佣金：</label>-->
+				<!--<input type="text" id="staCommission" class="mui-input-clear" disabled>-->
+			<!--</div>-->
 			<div class="mui-input-row">
 				<label>供应商：</label>
 				<input type="text" class="mui-input-clear" id="insupplier" disabled>
@@ -144,11 +145,11 @@
 			</div>-->
 			<div class="mui-input-row">
 				<div class="labelLf">状态流程：</div>
-				<ul class="flowPath" id="staEvoMenu"></ul>									
+				<ul class="flowPath" id="staEvoMenu"></ul>
 			</div>
 			<div class="mui-input-row">
 				<div class="labelLf">审核流程：</div>
-				<ul class="" id="staCheckMenu"></ul>									
+				<ul class="flowPath" id="staCheckMenu"></ul>
 			</div>
 			<div class="mui-input-row" id="inPaylistbox">
 				<div class="labelLf">支付信息：</div>
@@ -227,7 +228,7 @@
 					</div>
 				</div>
 				<div class="app_p15 app_f12" id="notes"></div>									
-			</div>			
+			</div>
 		</div>
 		<div class="clear"></div>
 		<input type="hidden" id="supplierId"/>
@@ -235,6 +236,6 @@
 		<script src="../../../js/component/mui.min.js"></script>	
 		<script src="../../../js/component/zepto.min.js"></script>
 		<script src="../../../js/component/GHutils.js"></script>
-		<script src="../../../js/orderMgmtJs/OrdermgmtHtmljs/ordDetail.js?v=20181106"></script>
+		<script src="../../../js/orderMgmtJs/OrdermgmtHtmljs/ordDetail.js?v=20181112"></script>
 	</body>
 </html>
