--- a/src/main/webapp/static/mobile/html/orderMgmtHtml/orDetails.html
+++ b/src/main/webapp/static/mobile/html/orderMgmtHtml/orDetails.html
@@ -83,7 +83,7 @@
 			<!--审批流程块 有的话显示-->
 			<div class="mui-input-row">
 				<div class="labelLf">审批流程：</div>
-				<ul class="" id="orCheckMenu">
+				<ul class="flowPath" id="orCheckMenu">
 					
 				</ul>
 			</div>
@@ -97,6 +97,6 @@
 		<script src="../../js/component/mui.min.js"></script>
 		<script src="../../js/component/zepto.min.js"></script>
 		<script src="../../js/component/GHutils.js"></script>
-		<script src="../../js/orderMgmtJs/orDetails.js?time=20181030"></script>
+		<script src="../../js/orderMgmtJs/orDetails.js?time=20181112"></script>
 	</body>
 </html>
