订单、备货单佣金、结算价修改

--- a/src/main/webapp/static/mobile/html/orderMgmtHtml/OrdermgmtHtml/orderCheck.html
+++ b/src/main/webapp/static/mobile/html/orderMgmtHtml/OrdermgmtHtml/orderCheck.html
@@ -62,10 +62,10 @@
 				<input type="text" id="staServerPrice" disabled>
 			</div>
 			<!-- 隐藏佣金 -->
-			<!--<div class="mui-input-row">-->
-				<!--<label>佣金：</label>-->
-				<!--<input type="text" id="staCommission" disabled>-->
-			<!--</div>-->
+			<div class="mui-input-row">
+				<label>佣金：</label>
+				<input type="text" id="staCommission" disabled>
+			</div>
 			<div class="mui-input-row">
 				<label>供应商：</label>
 				<input type="text" id="insupplier" disabled>
@@ -271,6 +271,6 @@
 		<script src="../../../js/component/mui.min.js"></script>	
 		<script src="../../../js/component/zepto.min.js"></script>
 		<script src="../../../js/component/GHutils.js"></script>
-		<script src="../../../js/orderMgmtJs/OrdermgmtHtmljs/orderCheck.js?v=20181112"></script>
+		<script src="../../../js/orderMgmtJs/OrdermgmtHtmljs/orderCheck.js?v=20181114"></script>
 	</body>
 </html>
