--- a/src/main/webapp/static/mobile/html/orderMgmtHtml/OrdermgmtHtml/ordDetail.html
+++ b/src/main/webapp/static/mobile/html/orderMgmtHtml/OrdermgmtHtml/ordDetail.html
@@ -59,10 +59,10 @@
 				<input type="text" class="mui-input-clear" id="staServerPrice" disabled>
 			</div>
 			<!-- 隐藏佣金 -->
-			<!--<div class="mui-input-row">-->
-				<!--<label>佣金：</label>-->
-				<!--<input type="text" id="staCommission" class="mui-input-clear" disabled>-->
-			<!--</div>-->
+			<div class="mui-input-row">
+				<label>佣金：</label>
+				<input type="text" id="staCommission" class="mui-input-clear" disabled>
+			</div>
 			<div class="mui-input-row">
 				<label>供应商：</label>
 				<input type="text" class="mui-input-clear" id="insupplier" disabled>
@@ -237,6 +237,6 @@
 		<script src="../../../js/component/mui.min.js"></script>	
 		<script src="../../../js/component/zepto.min.js"></script>
 		<script src="../../../js/component/GHutils.js"></script>
-		<script src="../../../js/orderMgmtJs/OrdermgmtHtmljs/ordDetail.js?v=20181112"></script>
+		<script src="../../../js/orderMgmtJs/OrdermgmtHtmljs/ordDetail.js?v=20181114"></script>
 	</body>
 </html>
