--- a/src/main/webapp/static/mobile/html/staffMgmtHtml/orderHtml/staOrdCheck.html
+++ b/src/main/webapp/static/mobile/html/staffMgmtHtml/orderHtml/staOrdCheck.html
@@ -61,10 +61,10 @@
 				<input type="text" id="staServerPrice" class="mui-input-clear" disabled>
 			</div>
 			<!-- 隐藏佣金 -->
-			<!--<div class="mui-input-row">-->
-				<!--<label>佣金：</label>-->
-				<!--<input type="text" id="staCommission" class="mui-input-clear" disabled>-->
-			<!--</div>-->
+			<div class="mui-input-row">
+				<label>佣金：</label>
+				<input type="text" id="staCommission" class="mui-input-clear" disabled>
+			</div>
 			<div class="mui-input-row">
 				<label>发票状态：</label>
 				<input type="text" id="staInvoice" class="mui-input-clear" disabled>
@@ -179,6 +179,6 @@
 		<script src="../../../js/component/mui.min.js"></script>	
 		<script src="../../../js/component/zepto.min.js"></script>
 		<script src="../../../js/component/GHutils.js"></script>
-		<script src="../../../js/staffMgmtJs/orderJs/staOrdCheck.js?v=20181023"></script>
+		<script src="../../../js/staffMgmtJs/orderJs/staOrdCheck.js?v=20181114"></script>
 	</body>
 </html>
