--- a/src/main/webapp/static/mobile/html/staffMgmtHtml/orderHtml/staOrdDetail.html
+++ b/src/main/webapp/static/mobile/html/staffMgmtHtml/orderHtml/staOrdDetail.html
@@ -55,10 +55,10 @@
 				<input type="text" class="mui-input-clear" id="staServerPrice" disabled>
 			</div>
 			<!-- 隐藏佣金 -->
-			<!--<div class="mui-input-row">-->
-				<!--<label>佣金：</label>-->
-				<!--<input type="text" id="staCommission" class="mui-input-clear" disabled>-->
-			<!--</div>-->
+			<div class="mui-input-row">
+				<label>佣金：</label>
+				<input type="text" id="staCommission" class="mui-input-clear" disabled>
+			</div>
 			<div class="mui-input-row">
 				<label>发票状态：</label>
 				<input type="text" class="mui-input-clear" id="staInvoice" disabled>
@@ -190,6 +190,6 @@
 		<script src="../../../js/component/mui.min.js"></script>	
 		<script src="../../../js/component/zepto.min.js"></script>
 		<script src="../../../js/component/GHutils.js"></script>
-		<script src="../../../js/staffMgmtJs/orderJs/staOrdDetail.js?v=20180914"></script>
+		<script src="../../../js/staffMgmtJs/orderJs/staOrdDetail.js?v=20181114"></script>
 	</body>
 </html>
