--- a/src/main/webapp/static/mobile/html/staffMgmtHtml/orderHtml/staOrdCheck.html
+++ b/src/main/webapp/static/mobile/html/staffMgmtHtml/orderHtml/staOrdCheck.html
@@ -106,7 +106,7 @@
 					
 				</ul>
 			</div>
-			<!--<div class="mui-input-row app_bline" id="orderTypebox">
+			<div class="mui-input-row app_bline" id="orderTypebox">
 				<label>供货方式：</label>
 		    	<div id="changeTxt" class="labelri">
 		    		本地备货
@@ -114,7 +114,7 @@
 		        	产地直发
 		        	<input id="yes" type="radio" name="localOriginType" value="0"  class="inputRadio"/>
 	        	</div>
-		    </div>-->
+		    </div>
 			<div class="app_cred3">
 				<div class="mui-row app_bline">
 					<div class="mui-input-row">
@@ -179,6 +179,6 @@
 		<script src="../../../js/component/mui.min.js"></script>	
 		<script src="../../../js/component/zepto.min.js"></script>
 		<script src="../../../js/component/GHutils.js"></script>
-		<script src="../../../js/staffMgmtJs/orderJs/staOrdCheck.js?v=20181114"></script>
+		<script src="../../../js/staffMgmtJs/orderJs/staOrdCheck.js?v=20181115"></script>
 	</body>
 </html>
