支付申请列表修改

--- a/src/main/webapp/static/mobile/html/staffMgmtHtml/orderHtml/staOrdDetail.html
+++ b/src/main/webapp/static/mobile/html/staffMgmtHtml/orderHtml/staOrdDetail.html
@@ -22,7 +22,7 @@
 				<input type="text" class="mui-input-clear" id="staPoordNum" disabled>
 			</div>
 			<div class="mui-input-row">
-				<label>经销店名称：</label>
+				<label id="customeName">经销店名称：</label>
 				<input type="text" class="mui-input-clear" id="staRelNum" disabled>
 			</div>
 			<div class="mui-input-row">
