--- a/src/main/webapp/static/mobile/html/orderMgmtHtml/OrdermgmtHtml/ordwaterCourseList.html
+++ b/src/main/webapp/static/mobile/html/orderMgmtHtml/OrdermgmtHtml/ordwaterCourseList.html
@@ -15,8 +15,7 @@
 	</head>
 	<body>
 		<header class="app_header mui-bar mui-bar-nav">
-			<!--mui-action-back--> 
-		    <a class="mui-action-back mui-icon mui-icon-back mui-pull-left app_cf" id="back"></a>
+		    <a class="mui-action-back mui-icon mui-icon-back mui-pull-left app_cf"></a>
 		    <span id="orWaterSechBtn" class="mui-icon mui-icon-search mui-pull-right app_cf"></span>
 		    <p class="app_cf app_nav_text_center">支付流水列表</p>
 		</header>
