--- a/src/main/webapp/static/mobile/html/staffMgmtHtml/relevanceHtml/relAdd.html
+++ b/src/main/webapp/static/mobile/html/staffMgmtHtml/relevanceHtml/relAdd.html
@@ -48,7 +48,7 @@
 			</div>
 			<div class="mui-input-row app_mb10" id="inAmendPoLastDaDiv">
 				<label class="commodityName">登录名：</label>
-				<input type="text" class="mui-input-clear commodityTxt" id="phpneId" placeholder="请输入">
+				<input type="text" class="mui-input-clear commodityTxt" id="phoneId" placeholder="请输入">
 				<font>*</font>
 			</div>
 		</div>
@@ -62,6 +62,6 @@
 		<script src="../../../js/component/zepto.min.js"></script>
 		<script src="../../../js/component/mui.min.js"></script>
 		<script src="../../../js/component/GHutils.js"></script>
-		<script src="../../../js/staffMgmtJs/relevanceJs/relAdd.js?v=20180914"></script>
+		<script src="../../../js/staffMgmtJs/relevanceJs/relAdd.js?v=20181105"></script>
 	</body>
 </html>
