佣金管理详情

--- a/src/main/webapp/static/mobile/html/orderMgmtHtml/commissionMgmtHtml/commDetil.html
+++ b/src/main/webapp/static/mobile/html/orderMgmtHtml/commissionMgmtHtml/commDetil.html
@@ -79,7 +79,8 @@
 			</div>
 			<div class="mui-input-row">
 				<label>业务状态：</label>
-				<input type="text" class="mui-input-clear" id="commBusinessStatus" disabled>
+				<input type="text" class="mui-input-clear doubleInput app_cred3" id="commFinal" disabled>
+				<input type="text" class="mui-input-clear doubleInput" id="commBusinessStatus" disabled>
 			</div>
 			<div class="mui-input-row">
 				<label>审核状态：</label>
@@ -125,7 +126,7 @@
 			</div>
 			<div class="mui-input-row staCommodity app_bline2">
 				<div class="labelLf">商品信息：</div>
-				<ul id="staCommodity" class="mui-table-view app_pl10"></ul>									
+				<ul id="ommodity" class="mui-table-view app_pl10"></ul>									
 			</div>
 		</div>
 		<div class="clear"></div>
