--- a/src/main/webapp/static/mobile/html/backstagemgmt.html
+++ b/src/main/webapp/static/mobile/html/backstagemgmt.html
@@ -24,6 +24,9 @@
 
 			</ul>
 		</div>
+		<!--<div class="code" style="width:100%;height:100%;">
+			<img id="code" src="http://images.wanhutong.com/upload/corp899/785/20180613/642611043fb54e7992d61772bfafd92d.png"/>
+		</div>-->
 		<div class="quitBtn">
 			<a href="/a/logout">
 				<button id="appQuitBtn" type="button" class="mui-btn mui-btn-primary mui-btn-block appQuitBtn">
