二维码添加

--- a/src/main/webapp/static/mobile/html/backstagemgmt.html
+++ b/src/main/webapp/static/mobile/html/backstagemgmt.html
@@ -12,7 +12,7 @@
 		<meta http-equiv="Cache" content="no-cache">
 		<title>运营管理后台</title>
 		<link href="../css/mui.min.css" rel="stylesheet" />
-		<link href="../css/app.css?time=20180914" rel="stylesheet" />
+		<link href="../css/app.css?time=20181121" rel="stylesheet" />
 	</head>
 
 	<body>
@@ -23,6 +23,8 @@
 			<ul class="mui-table-view  mui-grid-view app_notborder app_bnp app_f16" id="htmlMenu">
 
 			</ul>
+		</div>
+		<div class="codeBox">
 		</div>
 		<div class="quitBtn">
 			<a href="/a/logout">
@@ -36,7 +38,7 @@
 		<script src="../js/component/mui.min.js"></script>
 		<script src="../js/component/zepto.min.js"></script>
 		<script src="../js/component/GHutils.js"></script>
-		<script src="../js/backstagemgmt.js?v=20181017"></script>
+		<script src="../js/backstagemgmt.js?v=20181121"></script>
 	</body>
 
 </html>
